--- a/meeting/static/meeting/css/main.css
+++ b/meeting/static/meeting/css/main.css
@@ -28,7 +28,7 @@ body {
   width: 100%;
   border-right: 1px solid #ccc;
   overflow-y: auto;
-  padding: 20px;
+  padding: 10px;
   transition: width 0.5s ease;
 }
 .list-container.split-view {
@@ -58,7 +58,7 @@ body {
   background-color: #f8f9fa;
   color: black;
   cursor: pointer;
-  border-radius: 8px;
+  border-radius: 5px;
   border: none;
   font-size: 1em;
   font-weight: bold;
@@ -87,6 +87,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #e7f1ff;
+  margin: 1px 11px;
   padding: 10px;
   border-radius: 5px;
   margin-bottom: 20px;
