--- a/templates/meeting.html
+++ b/templates/meeting.html
@@ -49,72 +49,27 @@
     </style>
   </head>
   <body>
-    <div class="header">
-      <button class="btn btn-outline-secondary">알림함</button>
-      <div class="greeting">미팅브릿지님, 안녕하세요!</div>
-    </div>
-
     <div class="card">
       <div class="card-header d-flex justify-content-between">
-        <span>팀 간 협업 개선 방안 논의</span>
-        <span>2024-10-12 작성자 사용자1</span>
+        <span>{{ meeting.title }}</span>
+        <span>
+          {{ meeting.started_at|date:"Y-m-d H:i" }} 작성자 {{ meeting.host }}</span
+        >
       </div>
       <div class="card-body">
-        <p><strong>참여자</strong><br />사용자1, 사용자2, 미팅브릿지, 사용자3</p>
-        <p><strong>확인자</strong><br />사용자1(작성자), 미팅브릿지</p>
+        <p>
+          <strong>참여자</strong><br />{% for participant in Participants %}
+          {{participant}} {% endfor %}
+        </p>
+        <p>
+          <strong>확인자</strong><br />{% for participant in Participants %} {% if
+          participant.ischecker == 'True' %} {{ participant }} {% endfor %}
+        </p>
+
         <p><strong>회의 요약</strong></p>
-        <ol>
-          <li>
-            <strong>프로젝트 진행 현황 보고</strong>
-            <ul class="list-group">
-              <li class="list-group-item">
-                개발팀: 현재 기능 구현 70% 완료. 3주 내로 주요 기능 완성 예정.
-              </li>
-              <li class="list-group-item">
-                디자인팀: UI 시안 최종 검토 완료. 클라이언트 피드백 반영 중.
-              </li>
-              <li class="list-group-item">
-                기획팀: 사용자 테스트 계획 수립 중이며, 다음 주에 초기 사용자 선정 예정.
-              </li>
-            </ul>
-          </li>
-          <li>
-            <strong>주요 이슈</strong>
-            <ul class="list-group">
-              <li class="list-group-item">
-                리소스 부족: 개발팀 인력 부족으로 인해 일정 지연 가능성 있음. 추가 인력
-                확보 요청.
-              </li>
-              <li class="list-group-item">
-                디자인 수정: 클라이언트의 추가 요구 사항으로 인해 UI 수정 필요. 일정
-                재조정 필요.
-              </li>
-            </ul>
-          </li>
-          <li>
-            <strong>다음 단계</strong>
-            <ul class="list-group">
-              <li class="list-group-item">
-                개발팀: 10월 25일까지 기능 구현 완료 목표. 이후 내부 테스트 진행.
-              </li>
-              <li class="list-group-item">
-                디자인팀: 수정된 시안을 기획팀에 전달 후 최종 확정.
-              </li>
-              <li class="list-group-item">
-                기획팀: 사용자 테스트 준비 완료 후, 테스트 결과 분석을 위한 회의 일정
-                확정.
-              </li>
-            </ul>
-          </li>
-          <li>
-            <strong>결정 사항</strong>
-            <ul class="list-group">
-              <li class="list-group-item">
-                추가 인원 확보 방안 검토 및 기존 계획 수정 공고 진행.
-              </li>
-            </ul>
-          </li>
-        </ol>
+        <p>{{meeting.summary}}</p>
+
+        <p></p>
       </div>
     </div>
   </body>
