--- a/meeting/templates/meeting.html
+++ b/meeting/templates/meeting.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -12,49 +13,13 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <style>
-      body {
-        font-family: "Noto Sans KR", sans-serif;
-        background-color: #f8f9fa;
-        padding: 20px;
-      }
-      .header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 20px;
-      }
-      .header .greeting {
-        font-size: 1.2rem;
-        color: #333;
-      }
-      .card {
-        border: none;
-        border-radius: 8px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      }
-      .card-header {
-        background-color: #e9ecef;
-        border-bottom: none;
-        font-weight: bold;
-        font-size: 1.1rem;
-      }
-      .card-body {
-        color: #333;
-      }
-      .list-group-item {
-        border: none;
-        padding-left: 0;
-      }
-    </style>
+    <link rel="stylesheet" href="{% static 'meeting/css/meeting.css' %}?after">
   </head>
   <body>
     <div class="card">
       <div class="card-header d-flex justify-content-between">
         <span>{{ meeting.title }}</span>
-        <span>
-          {{ meeting.started_at|date:"Y-m-d H:i" }} 작성자 {{ meeting.host }}</span
-        >
+        <span>{{ meeting.started_at|date:"Y-m-d H:i" }} 작성자 {{ meeting.host }}</span>
       </div>
       <div class="card-body">
         <p>
@@ -68,9 +33,12 @@
 
         <p><strong>회의 요약</strong></p>
         <p>{{meeting.summary}}</p>
-
-        <p></p>
+        <br>
+        <div class="detailMeeting">
+          <a href="">전문 보기</a>
+        </div>
       </div>
+
     </div>
   </body>
 </html>
